refactor update notebooks

--- a/Hands-On-3-Portable-Parallel-Programming-with-MPI/Hands-On-3-Portable-Parallel-Programming-with-MPI.ipynb
+++ b/Hands-On-3-Portable-Parallel-Programming-with-MPI/Hands-On-3-Portable-Parallel-Programming-with-MPI.ipynb
@@ -5,7 +5,7 @@
    "id": "92f1ef18",
    "metadata": {},
    "source": [
-    "# Hands-On : Parallelization with OpenMP"
+    "# Hands-On 3: Parallelization with MPI"
    ]
   },
   {
@@ -24,9 +24,9 @@
    "source": [
     "|  Sessions     | Codes               | files              | \n",
     "| --------------| --------------------| ------------------ |\n",
-    "| Session 1     |  Basic Operations   |   `operations.c`   | \n",
-    "| Session 2     | Algebraic Function  |  `function.c`      | \n",
-    "| Session 3     |  Tridiagonal Matrix |   `tridiagonal.c`  | \n"
+    "| Session 1     |  Basic Operations   |   operations.c   | \n",
+    "| Session 2     | Algebraic Function  |  function.c      | \n",
+    "| Session 3     |  Tridiagonal Matrix |   tridiagonal.c  | \n"
    ]
   },
   {
@@ -44,15 +44,7 @@
    "id": "b13c9861",
    "metadata": {},
    "source": [
-    "The Algorithm [\\[alg:op:sec\\]](#alg:op:sec){reference-type=\"ref\"\n",
-    "reference=\"alg:op:sec\"} below solves the multiplication, addition and\n",
-    "subtraction of the elements of a vector of integers. The variable array\n",
-    "is the vector on which the operations will be performed. Then, modify\n",
-    "the program to run in parallel using MPI. Present the primitives used.\n",
-    "The idea is made the following MPI version with only 4 processes\n",
-    "running. In the version, each process does a function: 1 add, 1 subtract\n",
-    "and 1 multiplies. The other process is responsible for telling each of\n",
-    "the other 3 its function, and when finished printing the results."
+    "The Algorithm below solves the multiplication, addition and subtraction of the elements of a vector of integers. The variable array is the vector on which the operations will be performed. Then, modify the program to run in parallel using MPI. Present the primitives used. The idea is made the following MPI version with only $4$ processes running.In the version, each process does a function: $1$ add, $1$ subtract and $1$ multiplies. The other process is responsible for telling each of the other $3$ its function, and when finished printing the results."
    ]
   },
   {
