--- a/Hands-On-4-Matrix-Computation-with-MPI/HandsOn-4-Matrix-Computation-with-MPI.ipynb
+++ b/Hands-On-4-Matrix-Computation-with-MPI/HandsOn-4-Matrix-Computation-with-MPI.ipynb
@@ -210,20 +210,20 @@
     "\n",
     "    generate_ab_problem(size, A, B);\n",
     "\n",
-    "    printf(\"A\\n\");\n",
+    "    printf(\"\\nA\\n\");\n",
     "    print_matrix(A, size);\n",
-    "    printf(\"B\\n\");\n",
+    "    printf(\"\\nB\\n\");\n",
     "    print_array(B, size);\n",
     "\n",
     "    lu_decompose(A, size); // A now contains both L and U\n",
     "    solve_lyb(A, size, Y, B);\n",
     "    solve_uxy(A, size, X, Y);\n",
     "\n",
-    "    printf(\"L\\\\U\\n\");\n",
+    "    printf(\"\\nL\\\\U\\n\");\n",
     "    print_matrix(A, size);\n",
-    "    printf(\"Y\\n\");\n",
+    "    printf(\"\\nY\\n\");\n",
     "    print_array(Y, size);\n",
-    "    printf(\"X\\n\");\n",
+    "    printf(\"\\nX\\n\");\n",
     "    print_array(X, size);\n",
     "    \n",
     "    return 0;\n",
