--- a/Hands-On-5-Basic-Hybrid-Application-MPI+OpenMP/Hands-On-5-Basic-Hybrid-Application-MPI+OpenMP.ipynb
+++ b/Hands-On-5-Basic-Hybrid-Application-MPI+OpenMP/Hands-On-5-Basic-Hybrid-Application-MPI+OpenMP.ipynb
@@ -18,8 +18,8 @@
     "\n",
     "|  Sessions      | Codes                  | files              | \n",
     "| -------------- | -----------------------| ------------------ |\n",
-    "| Session 1      | Hello World            | `hello-mpi+openmp.c`                             |\n",
-    "| Session 2      | Hybrid Matrix Multiple | `mm-mpi.c`, `mm-openmp.c`, and `mm-mpi+openmp.c` |\n",
+    "| Session 1      | Hello World            | hello-mpi+openmp.c                             |\n",
+    "| Session 2      | Hybrid Matrix Multiple | mm-mpi.c, mm-openmp.c, and mm-mpi+openmp.c |\n",
     "\n",
     "First, we will execute a sample hybrid code *Hello World* to understand the meaning of heterogeneous environment applied in Parallel Computing.\n"
    ]
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!MP_NUM_THREADS=4 ./mm  1000  "
+    "!MP_NUM_THREADS=16 ./mm  1000  "
    ]
   },
   {
