--- a/Hands-On-6-Portable-Parallel-Programming-with-CUDA/HandsOn-6-Portable-Parallel-Programming-with-CUDA.ipynb
+++ b/Hands-On-6-Portable-Parallel-Programming-with-CUDA/HandsOn-6-Portable-Parallel-Programming-with-CUDA.ipynb
@@ -17,8 +17,8 @@
     "\n",
     "|  Sessions | Codes                              | files                        | \n",
     "|:----------|:-----------------------------------|:-----------------------------|\n",
-    "| Session 1 | Portable Sequential Code           | `saxpy.c`, and `saxpy.cu`    |\n",
-    "| Session 2 | Unified Memory (cudaMallocManaged) | `saxpy-cudaMallocManaged.cu` |\n"
+    "| Session 1 | Portable Sequential Code           | saxpy.c, and saxpy.cu    |\n",
+    "| Session 2 | Unified Memory (cudaMallocManaged) | saxpy-cudaMallocManaged.cu |\n"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!gcc saxpy-cudaMallocManaged.c -o saxpy-cudaMallocManaged "
+    "!nvcc saxpy-cudaMallocManaged.cu -o saxpy-cudaMallocManaged "
    ]
   },
   {
