--- a/Hands-On-2-Parallelization-with-OpenMP/Hands-On-2-Parallelization-with-OpenMP.ipynb
+++ b/Hands-On-2-Parallelization-with-OpenMP/Hands-On-2-Parallelization-with-OpenMP.ipynb
@@ -35,7 +35,7 @@
     "tags": []
    },
    "source": [
-    "## `Numeric integration`"
+    "## `Numeric Integration`"
    ]
   },
   {
@@ -144,7 +144,7 @@
     "{\n",
     "   int steps = atoi(argv[1]);\n",
     "   \n",
-    "   result = integral(0, 1, steps);\n",
+    "   double result = integral(0, 1, steps);\n",
     "  \n",
     "   printf(\"%f\\n\", result);\n",
     "\n",
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!gcc integral.c -o integral "
+    "!gcc integral.c -o integral -lm"
    ]
   },
   {
@@ -185,8 +185,7 @@
    "id": "c1a522ed-3957-4e2f-a2d0-df9b12ad0437",
    "metadata": {},
    "source": [
-    "We can check that the result obtained is incorrect. The problem is that the scope of the variables may be incorrect, resulting in race conditions. To solve this, we should correctly indicate the scope of the variables within the loop, by using clauses such as private or reduction, if necessary.\n",
-    "Once the code has been corrected, it can be compiled and executed again. We should check that the result is the sames as using a single thread (or without the -fopenmp compiler option) or as using different numbers of threads. Execution should be repeated several times 1."
+    "We can check that the result obtained is incorrect. The problem is that the scope of the variables may be incorrect, resulting in race conditions. To solve this, we should correctly indicate the scope of the variables within the loop, by using clauses such as private or reduction, if necessary. Once the code has been corrected, it can be compiled and executed again. We should check that the result is the sames as using a single thread (or without the `-fopenmp` compiler option) or as using different numbers of threads. Execution should be repeated several times 1."
    ]
   },
   {
@@ -194,7 +193,7 @@
    "id": "be567e12",
    "metadata": {},
    "source": [
-    "## `Image processing`"
+    "## `Image Processing`"
    ]
   },
   {
@@ -247,8 +246,8 @@
     "\n",
     "#define NUM_STEPS 5\n",
     "#define RADIUS 8\n",
-    "#define INPUT_IMAGE \"lenna.ppm\"\n",
-    "#define OUTPUT_IMAGE \"lenna-fil.ppm\"\n",
+    "#define INPUT_IMAGE \"./material/session-2/lenna.ppm\"\n",
+    "#define OUTPUT_IMAGE \"./material/session-2/lenna-fil.ppm\"\n",
     "\n",
     "struct pixel\n",
     "{\n",
