refactor update notebooks

--- a/Hands-On-2-Parallelization-with-OpenMP/Hands-On-2-Parallelization-with-OpenMP.ipynb
+++ b/Hands-On-2-Parallelization-with-OpenMP/Hands-On-2-Parallelization-with-OpenMP.ipynb
@@ -96,7 +96,7 @@
    "id": "b77e0774-722c-44c4-80ea-fe341c4a61b0",
    "metadata": {},
    "source": [
-    "The next step will be to modify the code in the file integral.c to perform the computation of the integral in parallel using OpenMP. A first approach could be to use the directive parallel for without considering if variables should be private or shared. By default, all variables are shared. After this change, you can compile and execute the program."
+    "The next step will be to modify the code in the file `integral.c` to perform the computation of the integral in parallel using OpenMP. A first approach could be to use the directive parallel for without considering if variables should be private or shared. By default, all variables are shared. After this change, you can compile and execute the program."
    ]
   },
   {
