--- a/Hands-On-4-Matrix-Computation-with-MPI/HandsOn-4-Matrix-Computation-with-MPI.ipynb
+++ b/Hands-On-4-Matrix-Computation-with-MPI/HandsOn-4-Matrix-Computation-with-MPI.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "|  Sessions     | Codes               | files              | \n",
     "| --------------| --------------------| ------------------ |\n",
-    "| Session 1     |  LU Factorization   |   `lu.c`   | "
+    "| Session 1     |  LU Factorization   |   lu.c   | "
    ]
   },
   {
