--- a/Hands-On-7-Accelerating-Applications-with-CUDA-C-Python/fundamentals-CUDA-C/Accelerating-Applications-with-CUDA-C/AC_CUDA_C.ipynb
+++ b/Hands-On-7-Accelerating-Applications-with-CUDA-C-Python/fundamentals-CUDA-C/Accelerating-Applications-with-CUDA-C/AC_CUDA_C.ipynb
@@ -376,9 +376,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div align=\"center\"><iframe src=\"https://docs.google.com/presentation/d/e/2PACX-1vSfi8LAinJ1RqTzlB2vRsAcDzCCk9gZov5rQODN5rtRMPt57UizCVv5LSVZ5WLxGtrsMm7FIkLb0wMR/embed?start=false&loop=false&delayms=3000\" frameborder=\"0\" width=\"900\" height=\"550\" allowfullscreen=\"true\" mozallowfullscreen=\"true\" webkitallowfullscreen=\"true\"></iframe></div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%HTML\n",
     "\n",
